--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,72 +10,77 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
+
 <body class="root">
-    <div class="page">
-<!--* header -->
-      <header class="header section">
-        <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
-      </header>
-      <main class="main">
-<!--* profile -->
-        <section class="profile section">
-          <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
-          <div class="profile__info">
-            <h1 class="profile__name">Билл Мюррей</h1>
-            <button class="button profile__edit-button" aria-label="Изменить профиль" type="button"></button>
-            <p class="profile__occupation">Актёр</p>
-          </div>
-          <button class="button profile__add-button" aria-label="Добавить" type="button"></button>
-        </section>
-<!--* elements -->
-        <section class="section elements">
-          <ul class="elements__list">         
-          </ul>
-        </section>
-      </main>
-<!--* footer -->
-      <footer class="footer section">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-      </footer>
-    </div>
-<!--* pop-up's -->
-<!--* edit-profile -->
-    <section class="popup popup_type_input" id="edit-profile">
-      <div class="popup__container popup__container_type_input">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-        <form class="popup__form" action='#' name="profile-edit-form" novalidate>
-          <input class="popup__input" id="name" type="text" placeholder="Имя" name="name" required minlength="2" maxlength="40">
-          <span class="popup__input-error" id="name-error">Mistake</span>
-          <input class="popup__input" id="occupation" type="text" placeholder="Род занятий" name="occupation" required minlength="2" maxlength="200">
-          <span class="popup__input-error" id="occupation-error"></span>
-          <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
-        </form>
-      </div>
-    </section>
-<!--* add place -->
-<section class="popup popup_type_input" id="add-place">
-  <div class="popup__container popup__container_type_input">
-    <h2 class="popup__title">Новое место</h2>
-    <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-    <form class="popup__form" action='#' name="add-element-form" novalidate>
-      <input class="popup__input" id="title" type="text" placeholder="Название" name="place" required minlength="2" maxlength="30">
-      <span class="popup__input-error" id="title-error">Mistake</span>
-      <input class="popup__input" id="link" type="url" placeholder="Ссылка на картинку" name="link" required>
-      <span class="popup__input-error" id="link-error"></span>
-      <button class="button popup__save-button popup__save-button_disabled" disabled type="submit" aria-label="Сохранить">Сохранить</button>
-    </form>
+  <div class="page">
+    <!--* header -->
+    <header class="header section">
+      <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
+    </header>
+    <main class="main">
+      <!--* profile -->
+      <section class="profile section">
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
+        <div class="profile__info">
+          <h1 class="profile__name">Билл Мюррей</h1>
+          <button class="button profile__edit-button" aria-label="Изменить профиль" type="button"></button>
+          <p class="profile__occupation">Актёр</p>
+        </div>
+        <button class="button profile__add-button" aria-label="Добавить" type="button"></button>
+      </section>
+      <!--* elements -->
+      <section class="section elements">
+        <ul class="elements__list">
+        </ul>
+      </section>
+    </main>
+    <!--* footer -->
+    <footer class="footer section">
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
   </div>
-</section>
-<!--* image -->
-    <section class="popup popup_type_image" id="image-popup">
-      <div class="popup__container popup__container_type_image">
-        <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-        <img class="popup__image" src="#" alt="Фото места">
-        <h2 class="popup__caption"></h2>
-      </div>
-    </section>
-<!--* templates -->
+  <!--* pop-up's -->
+  <!--* edit-profile -->
+  <section class="popup popup_type_input" id="edit-profile">
+    <div class="popup__container popup__container_type_input">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
+      <form class="popup__form" action='#' name="profile-edit-form" novalidate>
+        <input class="popup__input" id="name" type="text" placeholder="Имя" name="name" required minlength="2"
+          maxlength="40">
+        <span class="popup__input-error" id="name-error">Mistake</span>
+        <input class="popup__input" id="occupation" type="text" placeholder="Род занятий" name="occupation" required
+          minlength="2" maxlength="200">
+        <span class="popup__input-error" id="occupation-error"></span>
+        <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+      </form>
+    </div>
+  </section>
+  <!--* add place -->
+  <section class="popup popup_type_input" id="add-place">
+    <div class="popup__container popup__container_type_input">
+      <h2 class="popup__title">Новое место</h2>
+      <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
+      <form class="popup__form" action='#' name="add-element-form" novalidate>
+        <input class="popup__input" id="title" type="text" placeholder="Название" name="place" required minlength="2"
+          maxlength="30">
+        <span class="popup__input-error" id="title-error">Mistake</span>
+        <input class="popup__input" id="link" type="url" placeholder="Ссылка на картинку" name="link" required>
+        <span class="popup__input-error" id="link-error"></span>
+        <button class="button popup__save-button popup__save-button_disabled" disabled type="submit"
+          aria-label="Сохранить">Сохранить</button>
+      </form>
+    </div>
+  </section>
+  <!--* image -->
+  <section class="popup popup_type_image" id="image-popup">
+    <div class="popup__container popup__container_type_image">
+      <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
+      <img class="popup__image" src="#" alt="Фото места">
+      <h2 class="popup__caption"></h2>
+    </div>
+  </section>
+  <!--* templates -->
   <template class="element-template">
     <li class="element">
       <button class="button element__delete-button" aria-label="Удалить" type="button"></button>
@@ -87,4 +93,5 @@
   </template>
   <script type="module" src="./scripts/index.js"></script>
 </body>
+
 </html>
