--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <div class="popup__container popup__container_type_input">
       <h2 class="popup__title">Вы уверены?</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-      <form class="popup__form" action='#' name="delete-conformation-form" novalidate>
+      <form class="popup__form" id="delete-conformation-form" action='#' name="delete-conformation-form" novalidate>
         <button class="button popup__save-button" type="submit" aria-label="Да">Да</button>
       </form>
     </div>
@@ -54,7 +54,7 @@
     <div class="popup__container popup__container_type_input">
       <h2 class="popup__title">Обновить аватар</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-      <form class="popup__form" action='#' name="profile-edit-form" novalidate>
+      <form class="popup__form" id="avatar-edit-form" action='#' name="avatar-edit-form" novalidate>
         <input class="popup__input" id="avatar" type="url" placeholder="Ссылка на картинку" name="avatar" required>
         <span class="popup__input-error" id="avatar-error"></span>
         <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
@@ -66,7 +66,7 @@
     <div class="popup__container popup__container_type_input">
       <h2 class="popup__title">Редактировать профиль</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-      <form class="popup__form" action='#' name="profile-edit-form" novalidate>
+      <form class="popup__form" id="plofile-edit-form" action='#' name="profile-edit-form" novalidate>
         <input class="popup__input" id="name" type="text" placeholder="Имя" name="name" required minlength="2"
           maxlength="40">
         <span class="popup__input-error" id="name-error">Mistake</span>
@@ -82,7 +82,7 @@
     <div class="popup__container popup__container_type_input">
       <h2 class="popup__title">Новое место</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-      <form class="popup__form" action='#' name="add-element-form" novalidate>
+      <form class="popup__form" id="add-element-form" action='#' name="add-element-form" novalidate>
         <input class="popup__input" id="title" type="text" placeholder="Название" name="name" required minlength="2"
           maxlength="30">
         <span class="popup__input-error" id="title-error">Mistake</span>
